ipc/ipdl/test/ipdl/error/AsyncReturn.ipdl
// Async messages are not allowed to return values.

//error: asynchronous message `Msg' declares return values

protocol AsyncReturn {
child:
    async Msg() returns(int32_t aNumber);
};
